test/asm/label-macro-arg.out
ERROR: label-macro-arg.asm(45) -> label-macro-arg.asm::test_char(31):
    Macro 'something' not defined
$5
$6
$7
$8
sizeof__something equals $1
sizeof_@something equals $1
sizeof_#something equals $1
sizeof_.something equals $1
